hphp/test/zend/good/ext/posix/tests/posix_times_error.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(!extension_loaded("posix")) print "skip - POSIX extension not loaded";
}
