hphp/test/zend/bad/ext/posix/tests/posix_errno_variation2.php.skipif
<?php 
        if(!extension_loaded("posix")) print "skip - POSIX extension not loaded"; 
        if(!extension_loaded("pcntl")) print "skip - PCNTL extension required";
?>